--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@ body {
     margin: auto;
     width: 80%;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(196, 223, 240);
 }
 
 .header {
@@ -50,10 +51,20 @@ body {
 
 .recipe-title {
     text-align: left;
-    margin: 5px;
-    font-size: 24px;
+    /* margin: 5px; */
+    font-size: 1.25rem;
     text-decoration: none;
     color: black;
+    font-weight: 900;
+}
+
+.recipe-list {
+    font-size: 1.25rem;
+    color: black;
+}
+
+.recipe-summary {
+    font-size: 1rem;
 }
 
 .click-instruction {
@@ -77,6 +88,7 @@ label {
 
 .input {
     margin: 16px;
+    font-weight: 800;
 }
 
 #name {
