added html css buttons to adding new recipes

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
     padding: 10px 90px;
+    color: rgb(63, 63, 63);
 }
 
 header {
@@ -20,17 +21,17 @@ main {
     background-color:#D9E3DA;
     position: relative;
     float: right;
-    width: 75%;
+    width: 73%;
     vertical-align: top;
-    height: 600px;
-    padding: 20px;
+    min-height: 480px;
+    padding: 3%;
 }
 
 .navs {
     background-color: #C2C2B4;
     margin: 0 0 10px 0;
     padding: 15px 20px;
-    font-family: "Indie Flower";
+    font-family: "Gochi Hand";
 }
 
 a {
@@ -51,23 +52,103 @@ h1 {
     padding: 10px 0;
 }
 
-p {
-    font-family: "Indie Flower";
+h3 {
+    font-size: 30px;
+    margin-top: 5px;
 }
 
+h4 {
+    margin-bottom: 5px;
+}
+
+main, h3, h4, input, textarea {
+    font-family: "Gochi Hand";
+}
+
+form {
+    width: 100%;
+}
+
+input[type=text] {
+    padding: 5px;
+    font-size: 12px;
+    margin-bottom: 1px;
+}
+
+textarea {
+    padding: 5px;
+    font-size: 12px;
+    margin: 0 1px;
+    resize: vertical;
+}
+
+.eightyWidth {
+    width: 80%;
+}
+
+.twentyWidth{
+    width: 15px;
+    text-align: center;
+    color: black;
+    font-size: 12px;
+    background-color: white;
+    display: inline-block;
+    padding: 6px 5px;
+    vertical-align: top;
+}
+
+
+
+.plusButton{
+    border: 1px solid rgb(94, 148, 94);
+    margin-left: 3px;
+}
+
+.minusButton{
+    border: 1px solid rgb(148, 100, 94);
+    margin-left: 2px;
+}
+
+.plusButton:hover{
+    background-color: rgba(146, 211, 171, 0.616);
+    cursor: pointer;
+}
+
+.minusButton:hover{
+    background-color: rgba(211, 146, 146, 0.616);
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    border: 1px solid rgb(119, 119, 119);
+}
+
+
+
 @media (max-width: 900px){
+    h3 {
+        text-align: center;
+    }
+
     nav {
         width: 100%;
         text-align: center;
     }
 
     main {
-        width: 100%;
+        width: 90%;
+        padding: 5%;
         float: none;
     }
+
+    .eightyWidth {
+        width: 60%;
+    }
+    
 }
 
-@media (max-width: 600px){
+
+@media (max-width: 700px){
     body {
         padding: 10px 40px;
     }
@@ -77,7 +158,13 @@ p {
     }
 
     main {
-        width: 100%;
+        width: 90%;
+        padding: 5%;
         float: none;
     }
+
+    .eightyWidth {
+        width: 80%
+    }
+    
 }
