--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,38 @@
 body{
     padding: 50px;
+    width: 80%;
+    margin: 0 auto;
 }
 
-.ingredient-add, .instruction-add{
+div a, div a:hover{
+    text-decoration: none;
+    color: inherit;
+}
+
+.ingredients-add, .instructions-add{
     color: white;
     background-color: green;
 }
 
-.ingredient-remove, .instruction-remove{
+.ingredients-remove, .instructions-remove{
     color: white;
     background-color: red;
 }
 
-.ingredient-remove-wrapper, .instruction-remove-wrapper{
+.ingredients-remove-wrapper, .instructions-remove-wrapper{
     display: none;
+}
+
+.box{
+    display:flex;
+    flex-wrap: wrap;
+}
+
+p{
+    font-size: 11pt;
+}
+
+img{
+    height: 300px;
+    object-fit: cover;
 }
