--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,22 @@
 body {
 	font-family: 'Hind', sans-serif;
-	background-color: yellow;
+	background-image: url('http://www.luisazissman.co.uk/wp-content/uploads/2018/03/food.jpg');
+	background-size: cover;
 }
 
 label {
     display: inline-block;
     text-transform: capitalize;
     margin-right: 10px;
+}
+
+h1{
+	text-transform: capitalize;
+	text-align: center;
+}
+
+.main-container {
+    background-color: rgba(250, 249, 249, .9);
+    width: 80%;
+    margin: 0 auto;
 }
