--- a/public/style.css
+++ b/public/style.css
@@ -1,42 +1,48 @@
 body {
       font-family: helvetica, sans-serif;
-      background: white;
       text-align: center;
+      color: black;
     }
 
 h1 {
     font-family: 'Londrina Shadow', cursive;
-    text-align: center;
-    font-size: 100px;
-    color: black;
-    margin: 20px 0 0 0;
+    font-size: 90px;
+    color: rgb(153, 51, 102);
+    margin: 10px 0 0 0;
     font-weight: bold;
 }
 
 h2 {
-    font-size: 22px;
-    color: black;
-    text-align: center;
+    font-size: 14px;
+    color: rgb(102, 153, 102);
     margin: 10px auto;
-    font-weight: bold;
 }
 
 h3 {
     font-size: 18px;
     color: black;
-    text-align: center;
     margin: 10px auto;
+    font-weight: bold;
+}
+
+
+h4 {
+    font-size: 30px;
+    color: rgb(102, 153, 102);
+    margin: 30px auto 0;
     font-weight: bold;
 }
 
 p {
     font-size: 15px;
+    color: black;
 /*    text-align: left;*/
 }
 
 img {
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
+    border-radius: 5px;
 }
 
 form {
@@ -47,9 +53,46 @@ form {
 
 input {
     width: 500px;
-    height: 50px;
+    height: 40px;
 }
 
+nav {
+    display: block;
+    background-color: rgb(51, 51, 51);
+    padding: 10px;
+    margin-top: 10px;
+}
+
+nav > a {
+    font-size: 16px;
+    padding: 0 30px;
+    color: white;
+}
+
+footer {
+    display: block;
+    background-color: rgb(51, 51, 51);
+    padding: 5px;
+    margin: 20px auto 0;
+    height: 80px;
+}
+
+footer > a, footer > p {
+    font-size: 12px;
+    padding: 10px 30px;
+    color: white;
+}
+
+
+nav > a:hover {
+    text-decoration: underline;
+    color: rgb(255, 204, 0);
+}
+
+footer > a:hover, footer > p:hover {
+    text-decoration: underline;
+    color: rgb(255, 204, 0);
+}
 
 .eachRecipeContainer {
     margin: 30px;
@@ -57,21 +100,26 @@ input {
     color: black;
 }
 
-.create {
-    display: block;
-    text-align: center;
-    background-color: black;
-    color: white;
-    font-size: 20px;
-    padding: 10px;
-    text-decoration: underline;
-
+.columnleft, .columnright {
+    display: inline-block;
+    width: 48%;
+    float: left;
 }
 
-.viewOrDelete,.edit, .home {
-    padding: 10px;
-    font-size: 12px;
-    text-decoration: underline;
+.columnleft {
+    text-align: right;
+    padding: 50px;
+}
+
+.columnright {
+    text-align: left;
+    padding: 50px;
+}
+
+.selectedImage {
+    width: 300px;
+    height: 300px;
+    border-radius: 5px;
 }
 
 .example {
@@ -80,13 +128,13 @@ input {
     font-style: italic;
 }
 
-.gparent{
+/*.gparent{
     margin: 30px;
     display: inline-block;
     color: black;
     border: 2px solid black;
     padding: 10px;
-}
+}*/
 
 .dates {
     font-size: 10px;
@@ -94,9 +142,22 @@ input {
     padding: 5px;
 }
 
+.action {
+    clear: left;
+}
+
 .button {
     font-size: 15px;
     width: 100px;
     padding: 3px;
+    margin: 10px 25px;
     text-align: center;
+}
+
+.clearfix:after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
 }
