--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ img {
 form {
     display: inline-block;
     margin: 20px auto;
-/*    text-align: left;*/
+    text-align: left;
 }
 
 input {
@@ -67,6 +67,11 @@ nav > a {
     font-size: 16px;
     padding: 0 30px;
     color: white;
+    text-decoration: none;
+}
+
+div a {
+    text-decoration: none;
 }
 
 footer {
@@ -81,6 +86,7 @@ footer > a, footer > p {
     font-size: 12px;
     padding: 10px 30px;
     color: white;
+    text-decoration: none;
 }
 
 
@@ -102,7 +108,7 @@ footer > a:hover, footer > p:hover {
 
 .columnleft, .columnright {
     display: inline-block;
-    width: 48%;
+    width: 40%;
     float: left;
 }
 
