--- a/public/style.css
+++ b/public/style.css
@@ -9,8 +9,9 @@ header {
 }
 
 section {
-    overflow: auto;
+    width: 100%;
 }
+
 nav {
     display: inline-block;
     width: 18%;
@@ -21,10 +22,15 @@ main {
     background-color:#D9E3DA;
     position: relative;
     float: right;
-    width: 73%;
+    width: 79%;
     vertical-align: top;
     min-height: 480px;
-    padding: 3%;
+    margin-bottom: 20px;
+    padding: 20px 0;
+}
+
+form {
+    padding: 0 3%;
 }
 
 .navs {
@@ -41,10 +47,9 @@ a {
 }
 
 a:hover {
-   background-color: blue;
-   font-family: arial;
    color: white;
 }
+
 
 h1 {
     font-family: "Lobster";
@@ -55,10 +60,27 @@ h1 {
 h3 {
     font-size: 30px;
     margin-top: 5px;
+    margin-bottom: 15px;
 }
 
 h4 {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+
+h5 {
+    margin: 0;
+    font-size: 19px;
+}
+
+h6 {
+    margin: 2px 0 0 0;
+    text-align: justify;
+    font-size: 12px;
+}
+
+ul, ol {
+    margin-top: 0;
 }
 
 main, h3, h4, input, textarea {
@@ -72,7 +94,7 @@ form {
 input[type=text] {
     padding: 5px;
     font-size: 12px;
-    margin-bottom: 1px;
+    margin-bottom: 5px;
 }
 
 textarea {
@@ -124,8 +146,51 @@ input[type=submit]:hover {
 }
 
 
+.eachRecipe {
+    display: inline-block;
+    width: 30.7%;
+    margin: 0 0 2% 2%;
+    vertical-align: top;
+}
 
-@media (max-width: 900px){
+.eachRecipeDescription{
+    width: 96%;
+    background-color: #C2C2B4;
+    position: relative;
+    top: -8px; 
+    height: 100px;
+    padding: 2%;
+    overflow-x: scroll;
+}
+
+
+img, .recipeDetails {
+    display: block;
+    margin: 0 auto;
+    width: 90%;
+}
+
+.recipeDetails {
+    margin-top: 10px;
+}
+
+img.eachRecipeImg {
+    width: 100%;
+    height: 270px;
+    object-fit: cover;
+}
+
+.title {
+    text-decoration: overline;
+}
+
+
+
+@media (max-width: 1000px){
+    body {
+        padding: 10px 40px;
+    }
+
     h3 {
         text-align: center;
     }
@@ -136,35 +201,46 @@ input[type=submit]:hover {
     }
 
     main {
-        width: 90%;
-        padding: 5%;
+        width: 100%;
         float: none;
     }
 
     .eightyWidth {
         width: 60%;
     }
+
+    .eachRecipe {
+        width: 47%;
+        margin: 2% 0 2% 2%;
+    }
     
 }
 
 
-@media (max-width: 700px){
-    body {
-        padding: 10px 40px;
-    }
+@media (max-width: 800px){
     nav {
         width: 100%;
         text-align: center;
     }
 
-    main {
-        width: 90%;
-        padding: 5%;
-        float: none;
-    }
+    /* main {
+        text-align: center;
+    } */
 
     .eightyWidth {
         width: 80%
     }
+
+    .eachRecipe {
+        width: 46%;
+        margin: 2%;
+    }
     
+}
+
+@media (max-width: 600px){
+    .eachRecipe {
+        width: 96%;
+        margin: 2%;
+    }
 }
