--- a/public/style.css
+++ b/public/style.css
@@ -158,7 +158,7 @@ input[type=submit]:hover {
     background-color: #C2C2B4;
     position: relative;
     top: -8px; 
-    height: 100px;
+    height: 70px;
     padding: 2%;
     overflow-x: scroll;
 }
@@ -184,15 +184,17 @@ img.eachRecipeImg {
     text-decoration: overline;
 }
 
+.buttonLink {
+    font-size: 15px;
+    border: 1px solid rgb(63, 62, 62);
+    float: right;
+    padding: 3px 12px;
+}
 
 
 @media (max-width: 1000px){
     body {
         padding: 10px 40px;
-    }
-
-    h3 {
-        text-align: center;
     }
 
     nav {
