added edit button, debugged and added delete fn

--- a/public/style.css
+++ b/public/style.css
@@ -88,7 +88,7 @@ main, h3, h4, input, textarea {
 }
 
 form {
-    width: 100%;
+    width: 95%;
 }
 
 input[type=text] {
@@ -106,7 +106,7 @@ textarea {
 }
 
 .eightyWidth {
-    width: 80%;
+    width: 85%;
 }
 
 .twentyWidth{
@@ -140,6 +140,12 @@ textarea {
 .minusButton:hover{
     background-color: rgba(211, 146, 146, 0.616);
     cursor: pointer;
+}
+
+input[type=submit] {
+    font-size: 13px;
+    padding: 3px 20px;
+    margin-bottom: 5px;
 }
 
 input[type=submit]:hover {
@@ -208,10 +214,6 @@ img.eachRecipeImg {
         float: none;
     }
 
-    .eightyWidth {
-        width: 60%;
-    }
-
     .eachRecipe {
         width: 47%;
         margin: 2% 0 2% 2%;
@@ -226,19 +228,14 @@ img.eachRecipeImg {
         text-align: center;
     }
 
-    /* main {
-        text-align: center;
-    } */
-
-    .eightyWidth {
-        width: 80%
-    }
-
     .eachRecipe {
         width: 46%;
         margin: 2%;
     }
-    
+
+    .eightyWidth {
+        width: 75%;
+    }
 }
 
 @media (max-width: 600px){
