added script to make menu working

--- a/public/style.css
+++ b/public/style.css
@@ -1,134 +1,102 @@
-nav {
-  top: 0;
-  right: 0;
-  z-index: 1;
-  width: 100%;
-  position: absolute;
-  .menu {
-    top: 0;
-    left: 0;
-    margin: 0;
-    z-index: 1;
-    width: 100%;
-    background: #FF7012;
-    padding: 3em 0 2em;
-    position: absolute;
-    transform: translateY(-100%);
-    transition: transform 0.3s cubic-bezier(1,0.5,0,1);
-    &.active {
-      transform: translateY(0);
-    }
-    li {
-      list-style: none;
-      a {
-        padding: 1em;
-        color: #fff;
-        display: block;
-        background: none;
-        line-height: 1em;
-        font-size: 1.125em;
-        text-align: center;
-        text-decoration: none;
-        transition: background 0.2s ease-in-out;
-        span {
-          border-bottom: 1px dotted #fff;
-        }
-        &:hover, &:focus, &:active {
-          background: rgba(255,255,255,0.2);
-        }
-      }
-    }
-  }
+h1 {
+  color: red;
 }
 
-.menu-toggle {
-  top: 24px;
-  z-index: 2;
-  right: 12px;
-  width: 22px;
-  height: 4px; // If you have *{box-sizing:border-box} applied, you'll want to change this to 20px
-  padding: 8px 0;
-  cursor: pointer;
-  border-radius: 50%;
-  position: absolute;
-  span {
-    height: 4px;
-    display: block;
-    overflow: hidden;
-    text-indent: 100%;
-    background: #FF7012;
-    border-radius: 2px;
-    white-space: nowrap;
-    transition: background 0.3s ease-in-out;
-  }
-  &::before, &::after {
-    left: 0;
-    content: '';
-    width: 22px;
-    height: 4px;
-    background: #FF7012;
-    border-radius: 2px;
-    position: absolute;
-    transform-origin: center center;
-    transition: width 0.2s ease-in-out, background 0.2s ease-in-out, transform 0.2s ease-in-out, top 0.2s ease-in-out, bottom 0.2s ease-in-out, left 0.2s ease-in-out, right 0.2s ease-in-out;
-  }
-  &::before {
-    top: 0;
-  }
-  &::after {
-    bottom: 0;
-  }
-  &.menu-open {
-    span {
-      background: rgba(255,255,255,0);
-    }
-    &::before {
-      top: 8px;
-      transform: rotate(-45deg);
-    }
-    &::after {
-      bottom: 8px;
-      transform: rotate(45deg);
-    }
-    &::before, &::after {
-      width: 26px;
-      background: #fff;
-    }
-    &:hover, &:focus, &:active {
-      span {
-        background: rgba(255,255,255,0);
-      }
-      &::before {
-        top: 8px;
-        left: -3px;
-        transform: rotate(-45deg);
-      }
-      &::after {
-        left: 9px;
-        bottom: 8px;
-        transform: rotate(45deg)
-      }
-      &::before, &::after {
-        width: 18px;
-      }
-    }
-  }
-  &:hover, &:focus, &:active {
-    span {
-      background: rgba(255,255,255,0);
-    }
-    &::before {
-      top: 8px;
-      left: -3px;
-      transform: rotate(45deg);
-    }
-    &::after {
-      left: 9px;
-      bottom: 8px;
-      transform: rotate(-45deg)
-    }
-    &::before, &::after {
-      width: 18px;
-    }
-  }
+/* Important styles */
+#toggle {
+  display: block;
+  width: 28px;
+  height: 30px;
+  margin: 30px auto 10px;
 }
+
+#toggle span:after,
+#toggle span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -9px;
+}
+#toggle span:after{
+  top: 9px;
+}
+#toggle span {
+  position: relative;
+  display: block;
+}
+
+#toggle span,
+#toggle span:after,
+#toggle span:before {
+  width: 100%;
+  height: 5px;
+  background-color: #888;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+  border-radius: 2px;
+}
+
+/* on activation */
+#toggle.on span {
+  background-color: transparent;
+}
+#toggle.on span:before {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+#toggle.on span:after {
+  transform: rotate(-45deg) translate(7px, -8px);
+}
+#toggle.on + #menu {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* menu appearance*/
+#menu {
+  position: relative;
+  color: #999;
+  width: 200px;
+  padding: 10px;
+  margin: auto;
+  font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+  text-align: center;
+  border-radius: 4px;
+  background: white;
+  box-shadow: 0 1px 8px rgba(0,0,0,0.05);
+  /* just for this demo */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .4s;
+}
+#menu:after {
+  position: absolute;
+  top: -15px;
+  left: 95px;
+  content: "";
+  display: block;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 20px solid white;
+}
+ul, li, li a {
+  list-style: none;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+li a {
+  padding: 5px;
+  color: #888;
+  text-decoration: none;
+  transition: all .2s;
+}
+li a:hover,
+li a:focus {
+  background: #1ABC9C;
+  color: #fff;
+}
+
+
+/* demo styles */
+body { margin-top: 3em; background: #eee; color: #555; font-family: "Open Sans", "Segoe UI", Helvetica, Arial, sans-serif; }
+p, p a { font-size: 12px;text-align: center; color: #888; }
