--- a/public/style.css
+++ b/public/style.css
@@ -1,37 +1,58 @@
 body{
-	background-color: #282923;
+	background-color: #F6F6F6 ;
 	min-height: 100vh;
-	color: #C3C3C1;
+	/*color: ;*/
+	margin: 30px;
+}
+
+header{
+	/*margin: */
+	background-color: #52699E;
+	/*text-align: center;*/
+	padding-top:15px;
+	padding-left: 200px;
+	padding-bottom: 20px;
 }
 
 main{
 	display:flex;
+	margin: 0 auto;
+
 }
+
 main>*{
-  background-color:#eee;
-  margin:10px;
-}
-
-nav{
-	order: 1;
-	background-color: yellow;
-}
-
-aside{
-	order:3 ;
-	/*margin: auto;*/
-	background-color: red;
+  /*background-color:#eee;*/
+  /*margin:20px;*/
 }
 
 .content{
 	order: 1;
 	flex-grow: 3;
-	background-color: green;
+	/*background-color: green;*/
+	padding:15px;
+	/*border: 4px solid*/
+	margin: 20px;
 }
 
-nav, aside{
-  min-width:160px;
-  max-width:160px;
+nav{
+	order: 1;
+	background-color: #F2F2F2;
+}
+
+aside{
+	order:3 ;
+	/*margin: auto;*/
+	background-color: #F2F2F2;
+}
+
+nav {
+  min-width:15%;
+  max-width:15%;
+}
+
+aside{
+	min-width:20%;
+  max-width:20%;
 }
 
 .card-img{
@@ -39,8 +60,56 @@ nav, aside{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+
 }
 img {
   max-width: 100%;
   height: auto;
+}
+
+.row{
+	margin: 20px;
+}
+
+.card{
+	width: 22%;
+	border: 2px solid #67D8EF;
+	border-radius: 30px;
+	margin: 5px;
+}
+
+.card-recipes{
+	width: 30%;
+	background-color: #4491C7;
+	border: 2px solid #2E70E9;
+	border-radius: 10px;
+	margin: 2px;
+	text-align: center;
+}
+
+h1 {
+	font-size: 2em;
+}
+/*.card-body-recipes{
+	background-color:
+}*/
+
+ .glyphicon{
+ 	padding-right: 20px;
+ }
+
+
+/* Style buttons */
+.btn {
+  background-color: DodgerBlue; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
 }
