--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,32 @@
 body {
 	max-width: 960px;
 	margin: 0 auto;
+	padding: 16px;
+	background-image: url('images/background.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+  font-family: 'Quattrocento', serif;
+}
+
+h1, h2 {
+	font-family: 'Cinzel', serif;
+}
+
+
+
+.recipe-page img {
+	width: 100%;
+}
+
+/*.recipe-image {
+	max-width: 100%;
+}
+*/
+/*.recipe-page button {
+	position: relative;
+	top: 16px;
+}
+*/
+.recipe-page h1 {
+	text-align: center;
 }
