--- a/public/style.css
+++ b/public/style.css
@@ -1,18 +1,101 @@
+body {
+	margin: 60px;
+}
 
 .form-container {
 	display: flex;
 	justify-content: center;
 }
 
-.header-container {
-	position: relative;
+.header-container h1, .new-header h1{
+	font-family: 'Fredericka the Great', cursive;
+	font-size: 100px;
 	text-align: center;
+	margin-bottom: 50px;
+}
+
+
+.recipe-header img {
+	border: 2px solid #f2f2f2;
+	padding: 10px;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.title-container h1 {
+	text-align: center;
+	font-family: 'Satisfy', cursive;
+	font-size: 70px;
+	margin: 45px;
+}
+
+.h2-displayIndv {
+	font-family: 'Dosis', sans-serif;
+	text-transform: uppercase;
+	font-size: 30px;
+	margin-bottom: 20px;
+}
+
+p {
+	font-family: 'Dosis', sans-serif;
+	font-size: 20px;
+}
+
+.col-sm-4 {
+	border-right: 2px solid #f2f2f2;
+}
+
+.col-sm-8 {
+	padding-left: 40px;
+}
+
+/*.container {
+	border: 2px solid red;
+}
+*/
+#editLink {
+	text-decoration: none;
+	color: black;
+}
+
+#deleteButton {
+	margin-left: 20px;
+}
+
+.button-container {
+	margin-top: 50px;
+}
+
+.card-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+h5 {
+	font-family: 'Fredericka the Great', cursive;
+	font-size: 50px;
+}
+
+#homeTitle {
+	text-decoration: none;
 	color: white;
 }
 
-.header-container h1 {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+.imageThumbnail-container {
+  position: relative;
+ /* text-align: center;*/
+  color: white;
+}
+
+#centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  text-align:center;
+  background-color: rgba(0, 0, 0, 0.8)
 }
