--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@ body{
 	min-height: 100vh;
 	/*color: ;*/
 	margin: 30px;
+	font-family: 'PT Sans', sans-serif;
 }
 
 header{
@@ -108,6 +109,10 @@ h4{
 	background-color:
 }*/
 
+.time-stamps{
+	text-align: right;
+}
+
  .glyphicon{
  	padding-right: 20px;
  }
@@ -127,3 +132,39 @@ h4{
 .btn:hover {
   background-color: RoyalBlue;
 }
+
+
+
+
+element.style {
+}
+@media (max-width: 880px)
+.footer-distributed {
+    font: bold 14px sans-serif;
+}
+.footer-distributed {
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: bold 16px sans-serif;
+    padding: 55px 50px;
+    margin-top: 80px;
+}
+@media (max-height: 800px)
+/*footer {
+    position: static;
+}*/
+footer {
+    /*position: fixed;*/
+    bottom: 0;
+}
+* {
+    padding: 0;
+    margin: 0;
+}
+user agent stylesheet
+/*article, aside, footer, header, hgroup, main, nav, section {
+    display: block;
+}*/
