Able to create new recipes

--- a/public/style.scss
+++ b/public/style.scss
@@ -9,11 +9,19 @@ body{
 
 h1,h2,h3,h4,h5,h6{
   font-family: 'Montserrat', sans-serif;
+  text-transform: capitalize;
+}
+
+h3{
+  font-size: 3.0rem;
 }
 
 a{
   text-decoration: none;
   color: black;
+  &:hover{
+    text-decoration: none;
+  }
 }
 
 .recipe-preview{
