--- a/public/style.css
+++ b/public/style.css
@@ -6,11 +6,17 @@ body {
   font-size: 18px; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Montserrat', sans-serif;
+  text-transform: capitalize; }
+
+h3 {
+  font-size: 3.0rem; }
 
 a {
   text-decoration: none;
   color: black; }
+  a:hover {
+    text-decoration: none; }
 
 .recipe-preview {
   background: #eee;
