able to delete but delete the wrong recipe. because of index problems

--- a/public/style.css
+++ b/public/style.css
@@ -21,3 +21,9 @@ a {
 .recipe-preview {
   background: #eee;
   margin-bottom: 20px; }
+
+.feedback {
+  background: lightpink;
+  color: maroon;
+  padding: 5px 10px;
+  margin: 20px 0px; }
