--- a/public/style.scss
+++ b/public/style.scss
@@ -28,3 +28,10 @@ a{
   background: #eee;
   margin-bottom: 20px;
 }
+
+.feedback{
+  background: lightpink;
+  color: maroon;
+  padding: 5px 10px;
+  margin: 20px 0px; 
+}
