--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,10 +38,14 @@ h1,#main-image{
   text-align: center;
 }
 
-#instructions, #ingredients {
+#instructions, #ingredients, #createdon, #updatedon {
   margin: auto;
   max-width: 500px;
   min-height: 100px;
+}
+#createdon, #updatedon {
+  padding: 0;
+  min-height: 20px;
 }
 
 li {
@@ -75,4 +79,22 @@ img {
 .responsive {
   width: 100%;
   height: auto;
+}
+
+#page-content {
+  position: relative;
+  padding-bottom: 100px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  background-color: rgba(40,44,52,1);
+  color: white;
+}
+
+#nav-list{
+  list-style: none;
 }
