--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
-body {
-	font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Muli:300,400,700,900&display=swap');
 
+body {
+	font-family: 'Muli', sans-serif;
 }
 
 .main-wrapper {
@@ -21,6 +22,9 @@ body {
 	width: 100%;
 }
 
+h1 {
+	font-weight: 400;
+}
 
 .recipe {
 	display: flex;
@@ -38,13 +42,14 @@ body {
 .id {
 	color: #000;
 	font-size: 1em;
+	font-weight: 300;
 }
 
 
 .name {
 	color: #fff;
 	font-size: 1.2em;
-	font-weight: bold;
+	font-weight: 400;
 }
 
 
