--- a/public/style.css
+++ b/public/style.css
@@ -63,3 +63,26 @@ p {
 img {
 /*	box-sizing: content-box;*/
 }
+
+.recipe-id {
+	font-size: 1em;
+	padding: 10px;
+	margin: 10px 20px;
+}
+
+.recipe-name {
+	width: 50%;
+	font-size: 1em;
+	padding: 10px;
+	margin: 10px 20px;
+}
+
+
+.submit-btn {
+	display: block;
+	width: 200px;
+	height: 100px;
+	font-size: 2em;
+	padding: 10px;
+	margin: 10px 20px;
+}
