--- a/public/style.css
+++ b/public/style.css
@@ -86,3 +86,28 @@ img {
 	padding: 10px;
 	margin: 10px 20px;
 }
+
+
+.one-recipe {
+	display: flex;
+	flex-direction: column;
+/*	justify-content: center;*/
+	width: 100%;
+	margin: 5px;
+	padding: 10px;
+	border: 1px solid #00ff00;
+	border-radius: 10px;
+}
+
+.one-recipe-id {
+	font-size: 1em;
+	padding: 10px;
+	margin: 10px 20px;
+}
+
+.one-recipe-name {
+	font-size: 2.5em;
+	font-weight: 300;
+	padding: 10px;
+	margin: 10px 20px;
+}
