--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
 	padding: 0;
 	max-width: 720px;
 	width: 100%;
-/*	border: 1px solid red;*/
+	border: 1px solid #00ff00;
 }
 
 .header {
@@ -23,8 +23,21 @@ body {
 }
 
 h1 {
-	font-weight: 400;
+	font-weight: 300;
 }
+
+h3 {
+	font-weight: 300;
+}
+
+p {
+	display: block;
+	padding: 0;
+	margin: 5px;
+	border: 1px solid #ff00ff;
+	font-weight: 300;
+}
+
 
 .recipe {
 	display: flex;
@@ -53,36 +66,52 @@ h1 {
 }
 
 
-p {
-	display: block;
-	padding: 0;
-	margin: 5px;
-	border: 1px solid #ff00ff;
-}
 
 img {
 /*	box-sizing: content-box;*/
 }
 
-.recipe-id {
+input {
+	font-family: 'Muli', sans-serif;
+}
+
+.one-input-recipe {
+	display: flex;
+	flex-direction: column;
+/*	justify-content: center;*/
+	width: 100%;
+	margin: 5px;
+	padding: 10px;
+	border: 1px solid #ffff00;
+	border-radius: 10px;
+}
+
+
+.recipe-input-id {
 	font-size: 1em;
 	padding: 10px;
 	margin: 10px 20px;
+	font-size: 2em;
+	font-weight: 300;
 }
 
-.recipe-name {
-	width: 50%;
-	font-size: 1em;
+.recipe-input-name {
+	max-width: 100%;
+	width: 100%;
+	font-size: 2.5em;
+	font-weight: 300;
 	padding: 10px;
 	margin: 10px 20px;
+	border: 1px solid #ff00ff;
 }
 
 
-.submit-btn {
+.submit-input-btn {
 	display: block;
 	width: 200px;
 	height: 100px;
-	font-size: 2em;
+	font-size: 2.5em;
+	font-weight: 300;
 	padding: 10px;
 	margin: 10px 20px;
 }
