--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,10 +94,10 @@ img {
 
 footer {
   position: fixed;
-  bottom: 0;
+  bottom: 30px;
   width: 100%;
-  height: 2.5rem;
-  background-color: rgba(40,44,52,1);
+  height: 3.5rem;
+  background-color: rgba(40,44,52,0.5);
   color: white;
 }
 
