--- a/public/style.css
+++ b/public/style.css
@@ -89,21 +89,24 @@ h3 {
 	cursor: pointer;
 	width: 300px;
 	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 20px;
-	text-align: center;
+	font-size: 15px;
+	text-align: left;
 	padding: 5px;
 }
 
 #space {
 	height: 150px;
+	width: 400px;
 }
 
 #sub {
 	width: 100px;
+	text-overflow: auto;
+	text-align: center;
 }
 
 .formlist p {
-	font-size: 23px;
+	font-size: 20px;
 	font-family: Tahoma, Geneva, sans-serif;
 	text-align: center;
 	margin-bottom: 10px;
