--- a/public/style.css
+++ b/public/style.css
@@ -1,39 +1,43 @@
 body {
 	margin: 0 auto;
-	width: 80%;
-	background-color: #a5d6a7;
-	color: #424242;
+	width: 100%;
+	background-color: #2d3135;
+	font-family: 'Work Sans', sans-serif;
+	color: #bed1e4;
 }
 header {
 	background-color:#b3e5fc;
+	background-image: url(https://jeansimpson.com/wp-content/uploads/2018/03/Culinary-arts.jpg);
+	background-size: cover;
+	background-repeat: none;
+	background-position: right;
 	text-align: center;
 	box-shadow: 0px 0px 5px #9e9e9e;
 	padding-top: 20px;
+	color:#FFFFFF;
 /*	margin-bottom: 20px;*/
 }
 header h1 {
-	font-family: 'Ewert', cursive;
+	font-family: 'Dosis', sans-serif;
 	text-align: center;
 	font-size: 50px;
 	margin-top: 40px;
 	border-radius: 10px;
 }
-.main {
-	/*box-shadow: 0px 0px 5px #9e9e9e;*/
-	padding: 20px;
-}
+
 nav {
 	width: 100%;
 	display: table;
 	margin: auto;
 	height: 60px;
-	background-color:#b3e5df;
-	
+	background-color:#fffdf8c4;
 	border-radius: 3px;
 }
 a{
 	text-decoration: none;
 	color: inherit;
+		font-family: 'Work Sans', sans-serif;
+
 	}
 	a:hover {
 	color: darkcyan;
@@ -41,11 +45,11 @@ a{
 footer {
 	margin: 0 auto;
 	text-align: center;
-	padding: 20px;
-	background-color:#b3e5fc;
+	padding:30px;
+	background-color:#33658A;
 	text-align: center;
-	box-shadow: 0px 0px 5px #9e9e9e;
-	border-radius: 10px;
+	box-shadow: 0px 0px 0px #9e9e9e;
+	
 
 }
 ul li,  {
@@ -69,21 +73,36 @@ ul li,  {
 	
 }
 .main {
-	width: 100%;
+	width:70%%;
+	padding: 15px;
 	display:flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	align-items: center;
+  	justify-content: center;
+	
 }
 .card {
-	width: 90%;
-	/*margin: 0 auto;*/
+	width: 80%;
+	margin: 0 auto;
+	align-items: center;
+  	justify-content: center;
+
 }
 .card img {
-	width: 100%;
+	width: 80%;
+	margin-left: 40px;
+	padding: 0;
 	height: 200px;
-	margin-left: 0;
 	border-radius: 20px;
+	align-items: center;
+  	justify-content: center;
 }
 .card h3{
 	text-align: center;
+}
+.wrapper {
+	margin: 0 auto;
+	align-items: center;
+	width: 70%;
+	justify-content: center;
 }
