--- a/public/style.scss
+++ b/public/style.scss
@@ -1,15 +1,37 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather|Montserrat:600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald:300,400,500&display=swap');
+
+$background : #EDD382;
+$primary: #544173;
 
 body{
   margin: 0 auto;
   width: 100%;
-  font-family: 'Merriweather', serif;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
   font-size: 18px;
+  background: $background;
 }
 
 h1,h2,h3,h4,h5,h6{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
   text-transform: capitalize;
+}
+
+.button{
+  font-weight: 400;
+  height: 48px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.button.button-primary{
+  background-color: $primary;
+  border: none;
 }
 
 h3{
@@ -19,8 +41,19 @@ h3{
 a{
   text-decoration: none;
   color: black;
+  font-family: 'Oswald', sans-serif;
   &:hover{
     text-decoration: none;
+  }
+}
+
+.logo{
+  margin: 0 auto;
+  width: 300px;
+  margin-top: 20px;
+  text-align: center;
+  img{
+    width: 100%;
   }
 }
 
@@ -32,6 +65,8 @@ a{
 .feedback{
   background: lightpink;
   color: maroon;
-  padding: 5px 10px;
-  margin: 20px 0px; 
+  padding: 10px 20px;
+  margin: 20px 0px;
+  border-radius: 2px;
+  font-size: 0.8em;
 }
