--- a/public/style1.css
+++ b/public/style1.css
@@ -43,6 +43,9 @@ a   {
 a:hover {
 	color: darkcyan;
 }
+input:hover {
+	color: darkcyan;
+}
 img {
 	width: 100%;
 	height:250px;
@@ -132,7 +135,7 @@ ul li,  {
 	font-size: 14px;
 	margin: 0 5px;
 	/*box-shadow: 0px 0px 5px #9e9e9e;*/
-	background-color: #b3e5df;
+	background-color: #fffdf8c4;
 }
 .left form input.flright {
 	float: right;
@@ -144,13 +147,52 @@ ul li,  {
 input {
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 13px;
-	/*color: #ffffff;*/
-	display: block;
+	
+	/*/*display: block;*/
 	margin: 10px ;
 	text-align: center;
 	border-radius: 5px;
 	background-color: 
 	border: 1px solid #b3e5df;
 	height: 33px;
-	width: 300px;
+	width: 280px;
 }
+
+.edit form {
+	margin- left: 60px;
+}
+#submit {
+width: 120px;
+margin-left:350px;
+}
+.edit form p {
+	display:inline;
+	width: 200 px;
+	padding: 20px;
+	margin-left: 130px;
+}
+.editH1 {
+		text-align: center;
+		margin: 20px auto;
+	}
+
+ .one, .two, .three, .four {
+ 	display: inline;
+
+	
+	
+}
+.four {
+	margin-left: 37px;
+}
+.one{
+	margin-left: 47px;
+}
+/*.title, .inputImg, .inputIngr, .inputIntr {
+	display: inline-block
+}
+
+.title {
+	width: 100%;
+	display: inline-block;
+}*/
