--- a/public/style-ver-2.css
+++ b/public/style-ver-2.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:300,400,700,900&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Bungee+Outline&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bungee|Bungee+Hairline|Bungee+Outline&display=swap');
 
 
 /* ==============
@@ -10,6 +10,7 @@ tangerine: #F58A07;
 peach-orange: #FAC98E;
 very-pale-orange: #FCDFBB;
 magnolia: #F7F5FB;
+platium: #E1DFE5;
 darkcerulean: #084887;
 ceil: #909CC2;
 ==============*/
@@ -36,15 +37,23 @@ body {
 .header {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: flex-start;
 	width: 100%;
 	margin-top: 20px;
-	margin-bottom: 20px;
+/*	margin-bottom: 20px;*/
 }
 
+.display-3 {
+	margin-top: 3rem;
+}
+
+
 .sub-header {
-	font-family: 'Muli', sans-serif;
-	font-size: 1.5rem;
+	font-family: 'Bungee', cursive;
+	font-size: 2rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	color: #084887;
 }
 
 
